frontend/src/assets/scss/global.scss
:root {
    font-size: 8px;

    @include breakpoint_m {
      font-size: 10px;
    }
}

body {
  padding:
    env(safe-area-inset-top, $unit_l)
    env(safe-area-inset-right, $unit_l)
    env(safe-area-inset-bottom, $unit_l)
    env(safe-area-inset-left, $unit_l);

    text-rendering: geometricprecision;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

@import './reset.scss';
@import './utils/spacers.scss';
@import './utils/transitions.scss';
@import './atoms/type.scss';
@import './atoms/CKEditor.scss';

.page {
  overflow-x: clip;
}

.wrap {
  padding: 0 $unit_l;
  max-width: $media_xl;
  margin: 0 auto;

  &--slim {
    max-width: $media_l;
  }
}

section {
  position: relative;
  z-index: 1;
}

img {
  max-width: 100%;
  height: auto;
}


@import './utils/themes.scss';

